# verified-container-spec

./: .gitattributes  ECOSYSTEM.scm  README.adoc  ROADMAP.adoc  SECURITY-AUDIT-2026-01-25.md  SECURITY-FIXES-SUMMARY.md  STATE.scm  justfile  mustfile.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: codeql.yml  conformance-tests.yml  hypatia-scan.yml  mirror.yml  quality.yml  scorecard.yml  secret-scanner.yml  spec-ci.yml  spec-validation.yml  test-implementations.yml
.machine_readable/: AGENTIC.scm  ECOSYSTEM.scm  META.scm  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm
conformance/: README.adoc
conformance/profiles/: consumer.json  mvp-consumer.json  mvp-producer.json  producer.json
conformance/runner/: cli-contract.json
docs/: glossary.adoc  implementer-quickstart.adoc  interop-matrix.adoc  surface-contract.adoc  threat-model.adoc
examples/: README.adoc
examples/axiom-smt-runner/: Containerfile  README.adoc  channels.scm  solver-runner.sh  svalinn-policy.json
examples/happy-path/: consumer-flow.json  producer-flow.json
examples/nerdctl/: README.adoc
examples/podman/: README.adoc
examples/svalinn-gateway/: README.adoc
implementations/containerd-shim/: Cargo.toml  README.adoc
implementations/containerd-shim/src/: bundle.rs  main.rs  verify.rs
schema/: attestation-bundle.schema.json  transparency-log.schema.json  trust-store.schema.json
spec/: attestation-bundle.adoc  canonicalization.adoc  runtime-integration.adoc  transparency-log.adoc  trust-store.adoc  verification-protocol.adoc  versioning.adoc
vectors/: README.adoc
(+48 files in other folders)
